Week06/Lab/Lab2/k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels: { app: vote-web }
spec:
  type: ClusterIP
  selector: { app: vote-web }
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels: { app: vote-redis }
spec:
  type: ClusterIP
  selector: { app: vote-redis }
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels: { app: vote-postgres }
spec:
  type: ClusterIP
  selector: { app: vote-postgres }
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
